--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Keyframer Library Tester</title>
+    <title>KeyframerJS</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <h1 data-frame="test">Yo Test</h1>
     <script src="lib/keyframer.js"></script>
+    <script>
+        keyframer.createFrame("test", {
+            color: "pink",
+            background: "blue"
+        });
+        keyframer.createCSSTransitionOn("click", "h1", "0.5s ease-in-out", keyframer.frames["test"]);
+    </script>
 </body>
 </html>
